test/sema/variable-redefinition.cx
// RUN: %not %cx -typecheck %s | %FileCheck %s

void main() {
    var foo = 1;
    // CHECK: [[@LINE+2]]:9: error: redefinition of 'foo'
    // CHECK: :4:9: note: previous definition here
    var foo = 2;
}
